Added file for errors swagger docs
